# RAG

./: .dockerignore  .gitignore  .pre-commit-config.yaml  DOCKER.md  LM_STUDIO_SETUP.md  MICROSERVICES.md  README.md  a.py  app.py  app_old.py  client.py  data_info.ipynb  data_processing.ipynb  data_quality.json  docker-compose.microservices.yml  docker-compose.yml  docker_compose.yaml  dump.rdb  index_test.py  logs.py  pyproject.toml  pyrightconfig.json  run.py  run_api.py  run_desktop.sh  run_frontend.py  run_full_stack.py  run_interface.py  run_redis.py  text.txt  text_split.py
api/: app_old.py  config_manager.py  main.py  models.py  services.py  temp_storage.py
api/endpoints/: __init__.py  articles.py  config.py  documents.py  health.py  query.py  reload.py  upload.py
app/: logs.py  run_api.py  run_redis.py
app/api/: main.py  services.py
app/indexing/: __init__.py  data_processing.py  data_vectorize.py  indexing.py  run_indexing.py
app/query/: __init__.py  config.py  llm.py  pipeline.py  query.py
app/shared/: __init__.py  data_base.py  data_loader.py  ocr.py
communicate/: app.py
docker/: api.Dockerfile  backend.Dockerfile  frontend.Dockerfile  indexing.Dockerfile  nginx.conf  query.Dockerfile  wait_for_it.sh
documentation/: AUTH_SETUP.md  SETUP.md  documentation.html  styles.css
documentation/backend/: client.py  create_admin.py  main.py  requirements.txt
documentation/html/: documentation.html  readme_html.html  styles.css
documentation/react-app/: craco.config.js  package-lock.json  package.json
frontend/: README.md  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css  index.js  styles.css
indexing/: __init__.py  config.py  config.yaml  data_base.py  data_loader.py  data_processing.py  data_vectorize.py  indexing.py  indexing3.py  logs.py  ocr.py  requirements.txt  run_indexing.py  test_data_processing.py
indexing_without_uids/: config.py  config.yaml  data_base.py  data_loader.py  data_processing.py  data_vectorize.py  indexing.py  indexing_without_uid copy.py  indexing_without_uid.py  ocr.py  run_indexing.py
logs/: data_quality.json
logs_without_uids/: data_quality.json
ocr/: requirements.txt
query/: README_QUERY.md  __init__.py  app.py  client.py  config.py  config.yaml  data_base.py  llm.py  pipeline.py  query.py  redis_client.py  requirements.txt  requirements_improved.txt  run_query.py  test_query.py
rag-interface/: package.json
rag_system/: logs.py  run_api.py  run_redis.py
rag_system/api/: config_manager.py  main.py  models.py  services.py  state.py  temp_storage.py
rag_system/indexing/: __init__.py  config.py  config.yaml  data_processing.py  data_vectorize.py  indexing.py  run_indexing.py
rag_system/query/: __init__.py  combined.py  config.py  config.yaml  highlight.py  llm.py  pipeline.py  query.py  redis_client.py  reranker.py  run_query.py
rag_system/shared/: __init__.py  data_base.py  data_loader.py  embedding_prefix.py  index_snapshot.py  logs.py  model_loader.py  my_config.py  ocr.py  temp_storage.py
react_frontend/: README.md  package-lock.json  package.json
scripts/: backup-prod.sh  restore-prod.sh  start.sh
shared/: __init__.py  data_base.py  data_loader.py  logs.py  my_config.py  ocr.py
src/: config.py  data_processing.py  data_vectorize.py  indexing.py
static/: index.html  script.js  styles.css
tests/: integration_test.py  test_create_prompt.py  test_data_processing.py  test_integration.py
(+161 files in other folders)
