[project]
name = "rag-system"
version = "1.0.0"
description = "RAG System - Retrieval-Augmented Generation"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-text-splitters>=0.3.0",
    "faiss-cpu>=1.8.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "sentence-transformers>=3.0.0",
    "redis>=5.0.0",
    "python-multipart>=0.0.12",
    "requests>=2.31.0",
    "pdf2image>=1.17.0",
    "pytesseract>=0.3.10",
    "pillow>=10.0.0",
    "PyYAML>=6.0.1",
]

[dependency-groups]
dev = [
    "pymorphy2>=0.9.1",
    "pytest",
    "ruff",
    "mypy",
    "pyright",
    "pre-commit",
]

[project.scripts]
rag-api = "rag_system.run_api:main"

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
    ".venv",
    "venv",
    "env",
    "data",
    "logs",
    "react_frontend/node_modules",
    "react_frontend/build",
    "react_frontend/src-tauri/target",
    "__pycache__",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    ".git",
]

[tool.ruff.lint]
select = ["E", "F", "B"]
ignore = ["E402", "E501", "B008", "B904"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
check_untyped_defs = false
disallow_untyped_defs = false
pretty = true
explicit_package_bases = true
mypy_path = ["."]
disable_error_code = ["import-untyped"]
exclude = "(?x)(\\.venv|venv|env|data|logs|react_frontend|__pycache__|\\.pytest_cache|\\.mypy_cache|\\.ruff_cache)/"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
